--- a/Src/Launcher/Modules/FirstExample/Configuration.json
+++ b/Src/Launcher/Modules/FirstExample/Configuration.json
@@ -21,6 +21,15 @@
               "CustomSettings": {
                 "BasePath": "@wwwroot@/TreeNodes/Definitions/@treenodename@/"
               }
+            },
+            {
+              "Name": "SqLiteData",
+              "ImplementationAsString": "Ccf.Ck.SysPlugins.Data.Db.ADO.GenericSQLite, Ccf.Ck.SysPlugins.Data.Db.ADO",
+              "InterfaceAsString": "Ccf.Ck.SysPlugins.Interfaces.IDataLoaderPlugin, Ccf.Ck.SysPlugins.Interfaces",
+              "Default": true,
+              "CustomSettings": {
+                "ConnectionString": "Data Source=@moduleroot@/Data/studentsDb.sqlite;"
+              }
             }
           ]
         },
